--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -1,14 +1,15 @@
 /* styles.css */
 .mesh-gradient {
-    position: absolute; /* Ensure it covers the entire container */
+    position: fixed; /* Keeps it fixed to the viewport */
     top: 0; /* Align to the top */
     left: 0; /* Align to the left */
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    width: 100vw; /* Full width */
+    height: 100vh; /* Full height */
     background: radial-gradient(circle at 50% 50%, #051d27, #003a53, #c362ff90);
     animation: move 30s linear infinite; /* Adjust the timing and easing as needed */
     background-size: 200% 200%; /* Allow the background to animate smoothly */
     z-index: 0; /* Place behind other content */
+    pointer-events: none; /* Ensures the background doesn’t interfere with interactions */
   }
   
   @keyframes move {
