Front end stuff

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,21 @@
 @import "tailwindcss";
 
+@theme {
+  --color-prisma-a: #cd5aff;
+  --color-prisma-b: #8067ff;
+  --color-prisma-c: #ef64ff;
+  --color-prisma-d: #ff4b85;
+  --font-custom: "Space Grotesk", sans-serif;
+  --font-custom-bold: "Bebas Neue", sans-serif;
+}
 
 :root {
   --background: #000;
-  --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #fff;
   }
 }
 
@@ -20,14 +26,12 @@ body {
 }
 
 body {
-  color: var(--foreground);
   background: var(--background);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
